@@ -1420,6 +1420,34 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.getPlayerInfoError, 0)
         return d
     # ------------------------------------------------------------------------
+    def setPokerPlayerInfo(self, (client, packet), id ):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerPlayerInfo(serial= client.getSerial(),
+                                                       name = "The Naked Guy",
+                                                       outfit = "Naked",
+                                                       url = "http://example.org"))
+        found = False
+        for packet in avatar.resetPacketsQueue():
+            print "FOUND PACKETS"
+            print packet
+            if packet.type == PACKET_POKER_PLAYER_INFO:
+                self.assertEquals(packet.serial, client.getSerial())
+                self.assertEquals(packet.name, "The Naked Guy")
+                self.assertEquals(packet.outfit, "Naked")
+                self.assertEquals(packet.url, "http://example.org")
+                found = True
+        self.assertEquals(found, True)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test28_setPokerPlayerInfo(self):
+        """Test for setting poker player info."""
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.sendExplain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.setPokerPlayerInfo, 0)
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -1435,7 +1463,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test25"
+#    loader.methodPrefix = "test28"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
